--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -124,38 +124,11 @@
         return Task.CompletedTask;
     }
 
-    public class DegreeOptions
-    {
-        public Degree Value { get; set; }
-        public bool Selected
-        {
-            get => _Selected;
-            set
-            {
-                _Selected = value;
-            }
-        }
-        public bool _Selected;
-    }
-
-    public class DegreeModel
-    {
-        public string Value { get; set; }
-        public Degree Selected { get; set; } = Degree.Unspecified;
-        public List<DegreeOptions> Options { get; set; } = new List<DegreeOptions>()
-        {
-            new DegreeOptions() {Value=Degree.Unspecified, Selected=true},
-            new DegreeOptions() {Value=Degree.Bachelor, Selected=false},
-            new DegreeOptions() {Value=Degree.Master, Selected=false},
-            new DegreeOptions() {Value=Degree.PHD, Selected=false},
-        };
-    }
-
     async Task LoadProjects()
     {
         await OnChange();
 
-        if (model.Selected == Degree.Unspecified) //(int) Degree.Unspecified)
+        if (model.Selected == Degree.Unspecified)
         {
             try
             {
