--- a/ProjectBank/Client/Shared/ImageUploader.razor
+++ b/ProjectBank/Client/Shared/ImageUploader.razor
@@ -1,24 +1,44 @@
 @inject HttpClient _http
 @inject NavigationManager _navigationManager
 
-<div class="form-group input-group">
-    <InputFile id="Image" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif, .jpg" class="form-control"/>
-</div>
-<div class="form-group">
+@if (IsProject)
+{
+    <div class="form-group input-group">
+        <InputFile id="Image" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif, .jpg" class="form-control"/>
+    </div>
+}
+else
+{
+    <div class="profile_no_pic" style="background-image: url('./Unknown_profile_pic.png')">
+        <InputFile class="img_profile_overlay" id="Image" style="display: none" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif, .jpg"></InputFile>
+        <label for="Image" class="overlay"><span>Upload</span></label>
+    </div>
+}
+
+@if (IsProject)
+{
+    <div class="form-group">
         @if (!string.IsNullOrWhiteSpace(_imageUrl))
         {
             <div style="display: flex; justify-content: center; align-content: center; padding: 1em"><img src="@_imageUrl" alt="Project Image" class="img-thumbnail"></div>
             <div style="padding: 0.5em">
-                <RadzenButton style="width: 160px" Icon="save" BusyText="Saving ..." IsBusy=@_busy Click=@UploadImage Text="Upload" />
-                <RadzenButton style="width: 160px" IsBusy=@_busy Click=@ClearImage Text="Clear" />
+                <RadzenButton style="width: 160px" Icon="save" BusyText="Saving ..." IsBusy=@_busy Click=@UploadImage Text="Upload"/>
+                <RadzenButton style="width: 160px" IsBusy=@_busy Click=@ClearImage Text="Clear"/>
             </div>
-            
-        }@if (_sizeExceeded)
-         {
-             <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
-         }
-</div>
 
+        }
+        @if (_sizeExceeded)
+        {
+            <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
+        }
+    </div>
+}
+else //make a preview of profile picture.
+{
+    <div>
+        
+    </div>
+}
 @code {
     [Parameter]
     public int Id { get; set; }
