--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-
+﻿
 @inject HttpClient _http
 @inject AuthenticationStateProvider _authenticationStateProvider
 @inject NavigationManager _navigationManager
@@ -6,6 +6,7 @@
 
 <AuthorizeView>
     <Authorized>
+
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/"><img src="Logo_white_projectBank.png" height="75%" width="75%"/></a>
@@ -40,6 +41,15 @@
             <span class="oi oi-pencil" aria-hidden="true"></span> Create project idea
             </NavLink>
         </div>
+        @if (_role == "supervisor")
+        {
+             <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/createproject">
+            <span class="oi oi-pencil" aria-hidden="true"></span> Not visible for student
+            </NavLink>
+        </div>
+        }
+       
     </nav>
 </div>
 <hr>
@@ -54,6 +64,7 @@
         }
     }
 </div>
+
     </Authorized>
     <NotAuthorized>
 <div class="top-row ps-3 navbar navbar-dark">
@@ -97,18 +108,19 @@
 
 @code {
     private IEnumerable<string> favorites = null!;
+
     private List<string>? trialList;
+    private string _role;
     
     protected override async Task OnInitializedAsync()
     {
         trialList = new List<string>();
-        var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
-        var user = authState.User;
+        var user = (await _authenticationStateProvider.GetAuthenticationStateAsync()).User;
         if (user.Identity?.IsAuthenticated == true)
         {
-            
+            _role = user.FindFirst(c => c.Type.Contains("appRole"))?.Value;
             var _user = (await _authenticationStateProvider.GetAuthenticationStateAsync()).User;
-            var aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
+            var aToken = user.FindFirst(c => c.Type.Contains("aud"))?.Value;
             var account = await _http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/{aToken}");
             if (account != null)
             {
