--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -32,8 +32,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="account/settings">
-                <span class="oi oi-pencil" aria-hidden="true"></span> Settings
+            <NavLink class="nav-link" href="account/myprofile">
+                <span class="oi oi-person" aria-hidden="true"></span> My Profile
             </NavLink>
         </div>
          <div class="nav-item px-3">
