--- a/ProjectBank/Client/Pages/Browse.razor
+++ b/ProjectBank/Client/Pages/Browse.razor
@@ -26,16 +26,16 @@
         <div class="dropdown_menu_filter_browse">
             <div class="drop_filter_content_browse">
                 <EditForm EditContext="this.editContext">
-                    <h3>@model.Value</h3>
+                    <h3>@model.Value;</h3>
                     <h5>Option Select</h5>
                     <div>
                         <InputRadioGroup @bind-Value="model.Selected">
                             @foreach (var option in model.Options)
-                                {
+                            {
                                 <div>
                                     <InputRadio Value="option.Value" /> @option.Value
                                 </div>
-                                }
+                            }
                         </InputRadioGroup>
                     </div>
                 </EditForm>
@@ -83,7 +83,7 @@
     
     private void redirectToSwipePage(string keyword)
     {
-        navigationManager.NavigateTo("swipe/"+keyword);
+        navigationManager.NavigateTo("swipe/"+keyword+"/"+ (int)model.Selected);
     }
     private void redirectToSwipeAllPage()
     {
