Edit project and other fixes

--- a/ProjectBank/Client/Pages/AdditionalProjectSetup.razor
+++ b/ProjectBank/Client/Pages/AdditionalProjectSetup.razor
@@ -20,7 +20,7 @@
     </div>
     <div class="row" style="padding: 1em">
         <div class="align-items-center d-flex col-md-3">
-            <RadzenLabel Text="Project File:" />
+            <RadzenLabel Text="Project file:" />
         </div>
         <div class="col-md-9">
             @if (_project?.FileUrl != null)
