--- a/ProjectBank/Client/Pages/AuthorSearch.razor
+++ b/ProjectBank/Client/Pages/AuthorSearch.razor
@@ -21,7 +21,7 @@ else
             <h3 class="h5" style="color:black;">"@AuthName":</h3>
             <div class="d-flex flex-row">
                 <div>
-                    <div style="color:black;">Authored projects (@_projects.Length):</div>
+                    <div style="color:black;">Authored project ideas (@_projects.Length):</div>
                     <div style="color:black;">
                         @if (_projects != null)
                         {
