--- a/ProjectBank/Client/Pages/Projects.razor
+++ b/ProjectBank/Client/Pages/Projects.razor
@@ -31,7 +31,7 @@ else
                             <label class="oi oi-star" id="star_@_project.Id" for="star_checkbox_@_project.Id"></label>
                         }
                 </div>
-            <h3 class="h5" style="color:black;">Projects title: "@_project?.Title":</h3>
+            <h3 class="h5" style="color:black;">Project title: "@_project?.Title":</h3>
             <h4 style="color:black;">Authored by: <x onclick="@(() => navigationManager.NavigateTo($"/user/{_project.AuthorName}"))" style="cursor: pointer;">@_project?.AuthorName</x>
                  <h5 style="color:black;"> (Role: @_role) </h5>
             </h4>
@@ -48,7 +48,7 @@ else
                     <b style="color:black;">ECTS:</b>
                     <div style="color:black;">@(_project?.Ects)</div>
                     <b style="color:black;">Last updated:</b>
-                    @if (_lastUpdated.Days > 0){<div style="color:black;">@(_lastUpdated.Days) days ago</div>}else if (_lastUpdated.Hours > 0){<div style="color:black;">@(_lastUpdated.Hours) hours ago</div>}else if (_lastUpdated.Minutes > 0){<div style="color:black;">@(_lastUpdated.Minutes) minutes ago</div>}else{<div style="color:black;">@(_lastUpdated.Seconds) seconds ago</div>}
+                    @if (_lastUpdated.Days > 0){<div style="color:black;">@(_lastUpdated.Days) day(s) ago</div>}else if (_lastUpdated.Hours > 0){<div style="color:black;">@(_lastUpdated.Hours) hour(s) ago</div>}else if (_lastUpdated.Minutes > 0){<div style="color:black;">@(_lastUpdated.Minutes) minute(s) ago</div>}else{<div style="color:black;">@(_lastUpdated.Seconds) seconds ago</div>}
                     <b style="color:black;">Tags:</b>
                     <div style="color:black;">@if (_project != null){foreach (var keyword in _project.Keywords)
                     {
@@ -127,7 +127,7 @@ else
     {
         try {
             _project = await Http.GetFromJsonAsync<ProjectDetailsDto>("/api/Project/"+Id);
-            _lastUpdated = DateTime.Now - _project.LastUpdated;
+            _lastUpdated = DateTime.UtcNow - _project.LastUpdated;
         } catch {
             _project = null;
         }
@@ -136,21 +136,20 @@ else
             } else{
                 _role = "Supervisor";
             }
-
     }
    
     async Task ShowCloseableFromOverlayDialog()
     {
-        var _email =_project.AuthorName.ToString()+".gmail.com";
+        var _email =_project.AuthorName.ToString()+"@gmail.com";
         _email =_email.Replace(" ", String.Empty);
         await DialogService.OpenAsync("", ds =>
         @<div style="color:black;">
             <div>
             <h2 style="color:black;">Author Information</h2> </div>
-            <div>
-        Name: @_project.AuthorName</div> 
+        <div>
+            Name: @_project.AuthorName</div> 
         <div> 
-        Email: @_email</div>
+            Email: @_email</div>
         <div>
             <RadzenTextArea Placeholder="Write message" Style="height:75px;width:100px"/>
           <div>
